crates/shep-cli/src/lookout/snapshots/shep__lookout__frames__tests__empty.snap
---
source: crates/shep-cli/src/lookout/frames.rs
expression: render_text(&buffer)
---
shep lookout   /home/rin/.shep                                                        0 in the flock
host  load 2.31 4.10 3.88 / 10 cores   host mem 12.4G / 32.0G   flock cpu -   flock mem -   up 6d 3h
  ID    NAME              STATUS           PID      RESTARTS  CPU     MEM       UPTIME    FOLD      
────────────────────────────────────────────────────────────────────────────────────────────────────
the flock is empty                                                                                  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
no sheep selected: the flock is empty                                                               
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
bleats  no sheep is selected                                                                        
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
q quit   j/k select   g/G first/last   r refresh                                           read-only
