crates/shep-cli/src/lookout/snapshots/shep__lookout__frames__tests__feed_gap.snap
---
source: crates/shep-cli/src/lookout/frames.rs
expression: render_text(&buffer)
---
shep lookout   /home/rin/.shep                                                                            6 in the flock
host  load 2.31 4.10 3.88 / 10 cores   host mem 12.4G / 32.0G   flock cpu 14.7%   flock mem 716.0M   up 6d 3h           
  ID    NAME                                  STATUS           PID      RESTARTS  CPU     MEM       UPTIME    FOLD      
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  0     web                                   online           48211    0         3.4%    182.0M    1h 25m    edge      
  1     web                                   online           48212    0         2.9%    178.0M    1h 26m    edge      
> 2     api                                   online           48219    1         7.1%    241.0M    1h 28m    edge      
  3     billing-reconciliation-worker         online           48230    0         0.8%    96.0M     1h 29m    -         
  4     cron                                  online           48233    0         0.1%    8.0M      1h 31m    -         
  5     metrics                               online           48240    0         0.4%    11.0M     1h 32m    -         
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
sheep 2  api   online   pid 48219   restarts 1   uptime 1h 28m   cpu 7.1%   mem 241.0M   fold edge                      
out  /home/rin/.shep/logs/api-2-out.log                                                                                 
err  /home/rin/.shep/logs/api-2-err.log                                                                                 
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
bleats  api  … 525 earlier lines not shown, and 3.8M before them never read                                             
out  GET /v1/orders/25 200 33ms                                                                                         
out  GET /v1/orders/26 200 34ms                                                                                         
out  GET /v1/orders/27 200 35ms                                                                                         
out  GET /v1/orders/28 200 36ms                                                                                         
out  GET /v1/orders/29 200 37ms                                                                                         
q quit   j/k select   g/G first/last   r refresh                                                               read-only
